metadata/objects/fragment1_wide__c.object
<CustomObject>
    <fields>
        <fullName>Checkbox100__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox100</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox101__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox101</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checkbox102__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox102</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formula432__c</fullName>
        <formula>true</formula>
        <label>Formula432</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formula433__c</fullName>
        <formula>true</formula>
        <label>Formula433</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Formula434__c</fullName>
        <formula>true</formula>
        <label>Formula434</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LongTextArea421__c</fullName>
        <label>LongTextArea421</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LongTextArea422__c</fullName>
        <label>LongTextArea422</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LongTextArea423__c</fullName>
        <label>LongTextArea423</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number211__c</fullName>
        <label>Number211</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number212__c</fullName>
        <label>Number212</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number213__c</fullName>
        <label>Number213</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>fragment1_wide</label>
    <nameField>
        <displayFormat>fragment1_wide-{0000000}</displayFormat>
        <label>fragment1_wide Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>fragment1_wides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>